--- a/app/src/main/res/layout/activity_todo_list_manager.xml
+++ b/app/src/main/res/layout/activity_todo_list_manager.xml
@@ -5,18 +5,21 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     tools:context=".TodoListManagerActivity">
 
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edtNewItem"
+
         />
 
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/lstTodoItems" />
-
+        android:id="@+id/lstTodoItems"
+        />
 
 </LinearLayout>
